k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: riptide
  labels:
    app: riptide
spec:
  type: ClusterIP
  selector:
    app: riptide
  ports:
    - name: http
      port: 4000
      targetPort: 4000
